<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/img_love"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/unlove"
                android:layout_margin="10dp"/>

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                tool:text="市民大道(中林段)"
                android:textSize="22sp"
                android:textColor="@android:color/holo_blue_dark"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tool:text="2395-5514"
                android:textSize="18sp"
                android:textColor="@android:color/holo_blue_dark"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tool:text="中山區"
                android:textSize="18sp"
                android:textColor="@android:color/holo_blue_dark"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tool:text="中山北路-林森北路(地下)"
                android:textSize="18sp"
                android:textColor="@android:color/holo_blue_dark"/>
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"
            android:layout_margin="5dp">
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bus"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="@dimen/text_large"/>

                <TextView
                    android:id="@+id/tv_bus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tool:text="0"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_large"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/car"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="@dimen/text_large"/>

                <TextView
                    android:id="@+id/tv_car"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tool:text="0"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_large"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/moto"
                    android:textColor="@android:color/holo_green_dark"
                    android:textSize="@dimen/text_large"/>

                <TextView
                    android:id="@+id/tv_moto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tool:text="65"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_large"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bike"
                    android:textColor="@android:color/holo_orange_dark"
                    android:textSize="@dimen/text_large"/>

                <TextView
                    android:id="@+id/tv_bike"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tool:text="12"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_large"/>
            </LinearLayout>
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"
            android:layout_margin="5dp">
        </FrameLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/pay_info"
            android:textSize="18sp"
            android:textColor="@android:color/holo_red_light"/>

        <TextView
            android:id="@+id/tv_payInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            tool:text="計時：20元\/時(8-18)，10元\/時(18-8)。每日(20-8)最高收費50元，全程以半小時計費。月租：全日3,600元，日間2,400元(7-19)，夜間1,200元(限週一至週五19-8，及星期六、日與行政機關放假之紀念日、民俗"
            android:textSize="18sp"
            android:textColor="@android:color/holo_blue_dark"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/other"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            tool:text="立體式小型車496格(含身心障礙停車位10格)。"
            android:textSize="18sp"
            android:textColor="@android:color/holo_blue_dark"/>
    </LinearLayout>
</ScrollView>
